src/myparser/y.output

state 0
	$accept: .Start $end 

	SELECT  shift 8
	'('  shift 7
	.  error

	SelectStmt  goto 2
	select_no_parens  goto 3
	select_with_parens  goto 4
	simple_select  goto 5
	select_clause  goto 6
	Start  goto 1

state 1
	$accept:  Start.$end 

	$end  accept
	.  error


state 2
	Start:  SelectStmt.    (1)

	.  reduce 1 (src line 165)


state 3
	SelectStmt:  select_no_parens.    (2)

	.  reduce 2 (src line 172)


state 4
	SelectStmt:  select_with_parens.    (3)
	select_clause:  select_with_parens.    (11)

	$end  reduce 3 (src line 174)
	.  reduce 11 (src line 215)


state 5
	select_no_parens:  simple_select.    (6)
	select_clause:  simple_select.    (10)

	$end  reduce 6 (src line 183)
	')'  reduce 6 (src line 183)
	.  reduce 10 (src line 213)


state 6
	select_no_parens:  select_clause.sort_clause 
	select_no_parens:  select_clause.opt_sort_clause for_locking_clause opt_select_limit 
	select_no_parens:  select_clause.opt_sort_clause select_limit opt_for_locking_clause 
	simple_select:  select_clause.UNION all_or_distinct select_clause 
	simple_select:  select_clause.INTERSECT all_or_distinct select_clause 
	simple_select:  select_clause.EXCEPT all_or_distinct select_clause 
	opt_sort_clause: .    (68)

	ORDER  shift 14
	UNION  shift 11
	EXCEPT  shift 13
	INTERSECT  shift 12
	.  reduce 68 (src line 664)

	opt_sort_clause  goto 10
	sort_clause  goto 9

state 7
	select_with_parens:  '('.select_no_parens ')' 
	select_with_parens:  '('.select_with_parens ')' 

	SELECT  shift 8
	'('  shift 7
	.  error

	select_no_parens  goto 15
	select_with_parens  goto 16
	simple_select  goto 5
	select_clause  goto 6

state 8
	simple_select:  SELECT.opt_target_list into_clause from_clause where_clause group_clause having_clause 
	simple_select:  SELECT.distinct_clause target_list into_clause from_clause where_clause group_clause having_clause 
	opt_target_list: .    (23)

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	DISTINCT  shift 20
	DISTINCTROW  shift 21
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	'*'  shift 24
	.  reduce 23 (src line 326)

	opt_target_list  goto 17
	target_list  goto 19
	target_el  goto 22
	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 23
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33
	distinct_clause  goto 18

state 9
	select_no_parens:  select_clause sort_clause.    (7)
	opt_sort_clause:  sort_clause.    (67)

	$end  reduce 7 (src line 185)
	')'  reduce 7 (src line 185)
	.  reduce 67 (src line 659)


state 10
	select_no_parens:  select_clause opt_sort_clause.for_locking_clause opt_select_limit 
	select_no_parens:  select_clause opt_sort_clause.select_limit opt_for_locking_clause 

	FOR  shift 45
	LIMIT  shift 48
	OFFSET  shift 49
	.  error

	for_locking_clause  goto 43
	select_limit  goto 44
	limit_clause  goto 46
	offset_clause  goto 47

state 11
	simple_select:  select_clause UNION.all_or_distinct select_clause 
	all_or_distinct: .    (21)

	ALL  shift 51
	DISTINCT  shift 52
	.  reduce 21 (src line 308)

	all_or_distinct  goto 50

state 12
	simple_select:  select_clause INTERSECT.all_or_distinct select_clause 
	all_or_distinct: .    (21)

	ALL  shift 51
	DISTINCT  shift 52
	.  reduce 21 (src line 308)

	all_or_distinct  goto 53

state 13
	simple_select:  select_clause EXCEPT.all_or_distinct select_clause 
	all_or_distinct: .    (21)

	ALL  shift 51
	DISTINCT  shift 52
	.  reduce 21 (src line 308)

	all_or_distinct  goto 54

state 14
	sort_clause:  ORDER.BY sortby_list 

	BY  shift 55
	.  error


state 15
	select_with_parens:  '(' select_no_parens.')' 

	')'  shift 56
	.  error


state 16
	select_with_parens:  '(' select_with_parens.')' 
	select_clause:  select_with_parens.    (11)

	')'  shift 57
	.  reduce 11 (src line 215)


state 17
	simple_select:  SELECT opt_target_list.into_clause from_clause where_clause group_clause having_clause 
	into_clause: .    (48)

	INTO  shift 59
	.  reduce 48 (src line 503)

	into_clause  goto 58

state 18
	simple_select:  SELECT distinct_clause.target_list into_clause from_clause where_clause group_clause having_clause 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	'*'  shift 24
	.  error

	target_list  goto 60
	target_el  goto 22
	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 23
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 19
	opt_target_list:  target_list.    (22)
	target_list:  target_list.',' target_el 

	','  shift 61
	.  reduce 22 (src line 321)


state 20
	distinct_clause:  DISTINCT.    (17)

	.  reduce 17 (src line 285)


state 21
	distinct_clause:  DISTINCTROW.    (18)

	.  reduce 18 (src line 291)


state 22
	target_list:  target_el.    (24)

	.  reduce 24 (src line 331)


state 23
	target_el:  a_expr.opt_col_alias 
	a_expr:  a_expr.'+' a_expr 
	a_expr:  a_expr.'-' a_expr 
	a_expr:  a_expr.'*' a_expr 
	a_expr:  a_expr.'/' a_expr 
	a_expr:  a_expr.'%' a_expr 
	a_expr:  a_expr.'^' a_expr 
	a_expr:  a_expr.'&' a_expr 
	a_expr:  a_expr.'|' a_expr 
	a_expr:  a_expr.'<' a_expr 
	a_expr:  a_expr.'>' a_expr 
	a_expr:  a_expr.'=' a_expr 
	a_expr:  a_expr.AA a_expr 
	a_expr:  a_expr.OO a_expr 
	a_expr:  a_expr.SL a_expr 
	a_expr:  a_expr.SR a_expr 
	a_expr:  a_expr.LEG a_expr 
	a_expr:  a_expr.LNE a_expr 
	a_expr:  a_expr.NE a_expr 
	a_expr:  a_expr.IE a_expr 
	a_expr:  a_expr.LE a_expr 
	a_expr:  a_expr.GE a_expr 
	a_expr:  a_expr.AND a_expr 
	a_expr:  a_expr.OR a_expr 
	a_expr:  a_expr.LIKE a_expr 
	a_expr:  a_expr.NOT LIKE a_expr 
	a_expr:  a_expr.IS NULL 
	a_expr:  a_expr.IS NOT NULL 
	a_expr:  a_expr.IS TRUE 
	a_expr:  a_expr.NOT IS TRUE 
	a_expr:  a_expr.IS FALSE 
	a_expr:  a_expr.IS NOT FALSE 
	a_expr:  a_expr.BETWEEN b_expr AND a_expr 
	a_expr:  a_expr.IN in_expr 
	a_expr:  a_expr.NOT IN in_expr 
	a_expr:  a_expr.subquery_op subquery_type select_with_parens 
	a_expr:  a_expr.subquery_op subquery_type '(' a_expr ')' 
	opt_col_alias: .    (37)

	IDENT  shift 95
	STRING  shift 42
	AS  shift 93
	OR  shift 85
	AND  shift 84
	NOT  shift 87
	BETWEEN  shift 89
	'='  shift 73
	'<'  shift 71
	'>'  shift 72
	IS  shift 88
	LIKE  shift 86
	IN  shift 90
	GE  shift 83
	LE  shift 82
	NE  shift 80
	IE  shift 81
	LNE  shift 79
	SL  shift 76
	SR  shift 77
	LEG  shift 78
	AA  shift 74
	OO  shift 75
	'|'  shift 70
	'&'  shift 69
	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 67
	'^'  shift 68
	.  reduce 37 (src line 436)

	opt_col_alias  goto 62
	col_alias  goto 92
	ColLabel  goto 94
	ColId  goto 41
	subquery_op  goto 91

state 24
	target_el:  '*'.    (27)

	.  reduce 27 (src line 351)


state 25
	a_expr:  c_expr.    (105)

	.  reduce 105 (src line 962)


state 26
	a_expr:  '+'.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 96
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 27
	a_expr:  '-'.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 97
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 28
	a_expr:  NOT.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 98
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 29
	c_expr:  NUMBER.    (176)

	.  reduce 176 (src line 1575)


state 30
	c_expr:  '('.a_expr ')' 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 99
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 31
	c_expr:  EXISTS.select_with_parens 

	'('  shift 7
	.  error

	select_with_parens  goto 100

state 32
	c_expr:  func_expr.opt_collate_set 
	opt_collate_set: .    (210)

	COLLATE  shift 102
	.  reduce 210 (src line 1786)

	opt_collate_set  goto 101

state 33
	c_expr:  columnref.    (180)

	.  reduce 180 (src line 1599)


state 34
	c_expr:  time_expr.    (181)

	.  reduce 181 (src line 1603)


state 35
	c_expr:  case_expr.    (182)

	.  reduce 182 (src line 1609)


state 36
	func_expr:  func_name.'(' ')' 
	func_expr:  func_name.'(' func_arg_list ')' 

	'('  shift 103
	.  error


state 37
	columnref:  ColLabel.    (30)
	columnref:  ColLabel.indirection 

	'.'  shift 106
	.  reduce 30 (src line 383)

	indirection  goto 104
	indirection_el  goto 105

state 38
	time_expr:  INTERVAL.NUMBER time_type 

	NUMBER  shift 107
	.  error


state 39
	case_expr:  CASE.case_arg when_clause_list case_default END 
	case_arg: .    (239)

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  reduce 239 (src line 1884)

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 109
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	case_arg  goto 108
	columnref  goto 33

state 40
	ColId:  IDENT.    (46)
	func_name:  IDENT.    (199)

	'('  reduce 199 (src line 1716)
	.  reduce 46 (src line 484)


state 41
	ColLabel:  ColId.    (40)

	.  reduce 40 (src line 452)


state 42
	ColLabel:  STRING.    (41)

	.  reduce 41 (src line 457)


state 43
	select_no_parens:  select_clause opt_sort_clause for_locking_clause.opt_select_limit 
	opt_select_limit: .    (95)

	LIMIT  shift 48
	OFFSET  shift 49
	.  reduce 95 (src line 891)

	opt_select_limit  goto 110
	select_limit  goto 111
	limit_clause  goto 46
	offset_clause  goto 47

state 44
	select_no_parens:  select_clause opt_sort_clause select_limit.opt_for_locking_clause 
	opt_for_locking_clause: .    (91)

	FOR  shift 45
	.  reduce 91 (src line 860)

	opt_for_locking_clause  goto 112
	for_locking_clause  goto 113

state 45
	for_locking_clause:  FOR.UPDATE $$92 IN SHARE MODE 

	UPDATE  shift 114
	.  error


state 46
	select_limit:  limit_clause.offset_clause 
	select_limit:  limit_clause.    (98)

	OFFSET  shift 49
	.  reduce 98 (src line 912)

	offset_clause  goto 115

state 47
	select_limit:  offset_clause.limit_clause 
	select_limit:  offset_clause.    (99)

	LIMIT  shift 48
	.  reduce 99 (src line 918)

	limit_clause  goto 116

state 48
	limit_clause:  LIMIT.select_limit_value 
	limit_clause:  LIMIT.select_limit_value ',' select_offset_value 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 118
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33
	select_limit_value  goto 117

state 49
	offset_clause:  OFFSET.select_offset_value 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 120
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33
	select_offset_value  goto 119

state 50
	simple_select:  select_clause UNION all_or_distinct.select_clause 

	SELECT  shift 8
	'('  shift 7
	.  error

	select_with_parens  goto 123
	simple_select  goto 122
	select_clause  goto 121

state 51
	all_or_distinct:  ALL.    (19)

	.  reduce 19 (src line 299)


state 52
	all_or_distinct:  DISTINCT.    (20)

	.  reduce 20 (src line 304)


state 53
	simple_select:  select_clause INTERSECT all_or_distinct.select_clause 

	SELECT  shift 8
	'('  shift 7
	.  error

	select_with_parens  goto 123
	simple_select  goto 122
	select_clause  goto 124

state 54
	simple_select:  select_clause EXCEPT all_or_distinct.select_clause 

	SELECT  shift 8
	'('  shift 7
	.  error

	select_with_parens  goto 123
	simple_select  goto 122
	select_clause  goto 125

state 55
	sort_clause:  ORDER BY.sortby_list 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 128
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33
	sortby_list  goto 126
	sortby  goto 127

state 56
	select_with_parens:  '(' select_no_parens ')'.    (4)

	.  reduce 4 (src line 178)


state 57
	select_with_parens:  '(' select_with_parens ')'.    (5)

	.  reduce 5 (src line 180)


state 58
	simple_select:  SELECT opt_target_list into_clause.from_clause where_clause group_clause having_clause 
	from_clause: .    (51)

	FROM  shift 130
	.  reduce 51 (src line 527)

	from_clause  goto 129

state 59
	into_clause:  INTO.into_table_name 

	IDENT  shift 95
	.  error

	ColId  goto 132
	into_table_name  goto 131

state 60
	simple_select:  SELECT distinct_clause target_list.into_clause from_clause where_clause group_clause having_clause 
	target_list:  target_list.',' target_el 
	into_clause: .    (48)

	INTO  shift 59
	','  shift 61
	.  reduce 48 (src line 503)

	into_clause  goto 133

state 61
	target_list:  target_list ','.target_el 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	'*'  shift 24
	.  error

	target_el  goto 134
	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 23
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 62
	target_el:  a_expr opt_col_alias.    (26)

	.  reduce 26 (src line 343)


state 63
	a_expr:  a_expr '+'.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 135
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 64
	a_expr:  a_expr '-'.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 136
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 65
	a_expr:  a_expr '*'.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 137
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 66
	a_expr:  a_expr '/'.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 138
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 67
	a_expr:  a_expr '%'.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 139
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 68
	a_expr:  a_expr '^'.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 140
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 69
	a_expr:  a_expr '&'.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 141
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 70
	a_expr:  a_expr '|'.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 142
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 71
	a_expr:  a_expr '<'.a_expr 
	subquery_op:  '<'.    (187)

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  reduce 187 (src line 1647)

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 143
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 72
	a_expr:  a_expr '>'.a_expr 
	subquery_op:  '>'.    (188)

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  reduce 188 (src line 1652)

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 144
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 73
	a_expr:  a_expr '='.a_expr 
	subquery_op:  '='.    (189)

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  reduce 189 (src line 1656)

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 145
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 74
	a_expr:  a_expr AA.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 146
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 75
	a_expr:  a_expr OO.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 147
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 76
	a_expr:  a_expr SL.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 148
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 77
	a_expr:  a_expr SR.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 149
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 78
	a_expr:  a_expr LEG.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 150
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 79
	a_expr:  a_expr LNE.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 151
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 80
	a_expr:  a_expr NE.a_expr 
	subquery_op:  NE.    (193)

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  reduce 193 (src line 1672)

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 152
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 81
	a_expr:  a_expr IE.a_expr 
	subquery_op:  IE.    (190)

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  reduce 190 (src line 1660)

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 153
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 82
	a_expr:  a_expr LE.a_expr 
	subquery_op:  LE.    (192)

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  reduce 192 (src line 1668)

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 154
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 83
	a_expr:  a_expr GE.a_expr 
	subquery_op:  GE.    (191)

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  reduce 191 (src line 1664)

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 155
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 84
	a_expr:  a_expr AND.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 156
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 85
	a_expr:  a_expr OR.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 157
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 86
	a_expr:  a_expr LIKE.a_expr 

	IDENT  shift 40
	STRING  shift 42
	NUMBER  shift 29
	EXISTS  shift 31
	INTERVAL  shift 38
	'('  shift 30
	NOT  shift 28
	CASE  shift 39
	'+'  shift 26
	'-'  shift 27
	.  error

	ColLabel  goto 37
	ColId  goto 41
	a_expr  goto 158
	c_expr  goto 25
	func_expr  goto 32
	func_name  goto 36
	time_expr  goto 34
	case_expr  goto 35
	columnref  goto 33

state 87
	a_expr:  a_expr NOT.LIKE a_expr 
	a_expr:  a_expr NOT.IS TRUE 
	a_expr:  a_expr NOT.IN in_expr 

	IS  shift 160
	LIKE  shift 159
	IN  shift 161
	.  error

